tests/errors/call_overflow.s

# Exploding the call stack
main:
    call main

